kubernetes/website/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-cool-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      kubernetes.io/app: super-cool-app
  template:
    metadata:
      labels:
        kubernetes.io/app: super-cool-app
    spec:
      containers:
      - name: rickroll-container
        image: modem7/docker-rickroll
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/app: react-frontend
  template:
    metadata:
      labels:
        kubernetes.io/app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: localhost:32000/frontend:0.1.0
        imagePullPolicy: Always
        command: ["npm", "run", "dev", "--", "--host"]
        ports:
        - containerPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-zeit
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/app: match-zeit
  template:
    metadata:
      labels:
        kubernetes.io/app: match-zeit
    spec:
      containers:
      - name: streamlit
        image: localhost:32000/match-zeit:1.0.0
        imagePullPolicy: Always
        # Override the entrypoint to inject the base URL path argument
        command: ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"] #, "--server.baseUrlPath=MatchZeit/"]
        ports:
        - containerPort: 8501
