kubernetes/website/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: super-cool-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    kubernetes.io/app: super-cool-app
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  ports:
  - port: 5173
    targetPort: 5173
    protocol: TCP
  selector:
    kubernetes.io/app: react-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: match-zeit-service
spec:
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
  selector:
    kubernetes.io/app: match-zeit
