kubernetes/website/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-cool-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: "/video.mp4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bauerlein.dev
    secretName: super-cool-tls
  rules:
  - host: bauerlein.dev
    http:
      paths:
      - path: /video
        pathType: Prefix
        backend:
          service:
            name: super-cool-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bauerlein.dev
    secretName: super-cool-tls
  rules:
  - host: bauerlein.dev
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: react-frontend-service
            port:
              number: 5173
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: match-zeit-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
#    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bauerlein.dev
    secretName: super-cool-tls
  rules:
  - host: bauerlein.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: match-zeit-service
            port:
              number: 8501
